[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vacuumworld"
version = "4.4.1"
description = "VacuumWorld: an agent platform for cleaning robots."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Emanuele Uliana" },
    { name = "Benedict Wilkins" },
    { name = "Nausheen Saba" },
    { name = "Joel Clarke" },
    { name = "Kostas Stathis" }
]
maintainers = [
    { name = "VacuumWorld Team", email = "vw@dicelab-rhul.org" }
]
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]

dependencies = [
    "pystarworldsturbo>=1.2.9",
    "pillow",
    "wheel",
    "ipython",
    "pytest",
    "screeninfo",
    "tk",
    "requests",
    "google-genai",
    "python-dotenv",
    "playsound3",
    "pyjoptional>=1.1.3",
    "pymonitors>=1.0.2"
]

[project.urls]
Homepage = "https://github.com/dicelab-rhul/vacuumworld"  # ← replace with actual repo URL

[tool.setuptools.packages.find]
where = ["vacuumworld"]
include = ["vacuumworld*"]
